--- a/registro.html
+++ b/registro.html
@@ -44,9 +44,12 @@
         </div>
 
         <nav>
+            <strong>
             <a href="index.html">Portada</a>
             <a href="registro.html" class="active">Registro</a>
             <a href="aviso-legal.html">Aviso Legal</a>
+            </strong>
+            
         </nav>
         
     </div>
