--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -17,7 +17,7 @@
         <div class="content">
             <h2>Aviso Legal y Términos de Uso</h2>
             <div class="legal-content">
-                <p><strong>Aviso Legal:</strong></p>
+                <p class="aviso"><strong>Aviso Legal:</strong></p>
                 <p>
                     1. Datos Identificativos del Titular
 
@@ -103,7 +103,7 @@
                     Condiciones de Uso: También es recomendable tener unas condiciones de uso separadas que regulen los derechos y obligaciones de los usuarios al utilizar la App.<br>
                     Adaptación a la Legislación Local: Si la App se ofrece en varios países, es posible que debas adaptar el aviso legal a la legislación de cada país.
                 </p>
-                <p><strong>Términos de Uso:</strong></p>
+                <p class="aviso"><strong>Términos de Uso:</strong></p>
                 <p>
                     1. Aceptación de los Términos
 
@@ -200,7 +200,7 @@
                     Condiciones de Uso Específicas: Dependiendo de las funcionalidades de tu App, es posible que necesites añadir condiciones de uso específicas para ciertas secciones o servicios.<br>
                     Revisión Legal: Es fundamental que un abogado revise estos términos de uso para asegurarse de que cumplen con todas las leyes aplicables.
                 </p>
-                <p><strong>Propiedad Intelectual:</strong></p>
+                <p class="aviso"><strong>Propiedad Intelectual:</strong></p>
                 <p>Todos los derechos de propiedad intelectual relacionados con la marca Basic-Fit pertenecen a sus respectivos propietarios.</p>
 
          </div>
