--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
                     <div class="intro-section">
                         <div class="intro-text">
                             <h1>Bienvenido a Basic-Fit</h1>
-                            <p>Tu gimnasio a un clic de distancia.</p>
+                            <strong>
+                                <p class="slogan">Tu gimnasio a un clic de distancia.</p>
+                            </strong>
+                            
+                            <p class="presentacion">En Basic-Fit, creemos que el fitness debe ser accesible, asequible y adaptable a tu estilo de vida. Por eso, te ofrecemos una experiencia de gimnasio completa y flexible, diseñada para que alcances tus metas a tu manera.</p>
                         </div>
                         <div class="slideshow-container">
                             <div class="mySlides fade">
