--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <nav>
               <strong>
                 <a href="index.html" class="active">Portada</a>
+                <a href="Documentacion.html">Documentacion</a>
                 <a href="registro.html">Registro</a>
                 <a href="aviso-legal.html">Aviso Legal</a>
               </strong>
