--- a/Documentacion.html
+++ b/Documentacion.html
@@ -189,7 +189,7 @@
     <section class="functions-section">
         <h2>Funciones Principales</h2>
         <div class="function" id="funcion-1">
-            <img src="" alt="Función 1">
+            <img src="funcion1.png" alt="Función 1">
             <h3>Entrenamiento Personalizado</h3>
             <p>Accede a planes de entrenamiento adaptados a tus objetivos y nivel de fitness.</p>
         </div>
