--- a/registro.html
+++ b/registro.html
@@ -43,6 +43,15 @@
             </div>
         </div>
 
+        <div class="download-section">
+            <h2>Redes Sociales:</h2>
+            <div class="app-links">
+                <a href="https://www.instagram.com/basicfites/"><img src="instagram.png" alt="instagram"></a>
+                <a href="https://x.com/BasicFit_ESP"><img src="tiwitter.png" alt="Twitter"></a>
+                <a href="https://www.tiktok.com/@basicfit_?lang=es"><img src="tiktok.png" alt="TikTok"></a>
+            </div>
+        </div>
+
         <nav>
             <strong>
               <a href="index.html" >Portada</a>
