--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
                         <a href="https://www.basic-fit.com/es-es/basic-fit-app"><img src="descargar.png" alt="Descarga Directa"></a>
                     </div>
                 </div>
+                <div class="download-section">
+                    <h2>Redes Sociales:</h2>
+                    <div class="app-links">
+                        <a href="https://www.instagram.com/basicfites/"><img src="instagram.png" alt="instagram"></a>
+                        <a href="https://x.com/BasicFit_ESP"><img src="tiwitter.png" alt="Twitter"></a>
+                        <a href="https://www.tiktok.com/@basicfit_?lang=es"><img src="tiktok.png" alt="TikTok"></a>
+                    </div>
+                </div>
             </div>
             <nav>
               <strong>
